--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "pass-generator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "build": "babel index.js -d dist",
+    "build": "babel src -d dist",
     "start": "npm run build && node dist/index.js"
   },
   "author": "",
@@ -14,6 +14,7 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@walletpass/pass-js": "^6.9.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   }
 }
