--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "npm run build"
+    },
+    {
+      "src": "dist/index.js",
+      "use": "@now/node"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
